# asterion

./:  NOTES.md  .gitignore  ATTRIBUTION.md  NOTES.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy.yml
pipeline/: README.md  pyproject.toml  sources.toml
pipeline/notebooks/: README.md
pipeline/src/pipeline/: __init__.py  __main__.py  cli.py  download_normalizers.py  hashing.py  paths.py  provenance.py  raw_inputs.py  sources.py
pipeline/src/pipeline/commands/: attribution.py  fetch.py  install.py  list_sources.py  process.py
pipeline/src/pipeline/processors/: __init__.py  earth_clouds.py  jpl_horizons_mission.py  mission_common.py  mission_profile.py  moon_height.py  passthrough.py  saturn_body.py  saturn_rings.py  saturn_rings_bjj.py  starfield.py  zip_glb.py
pipeline/tests/: test_download_normalizers.py  test_earth_clouds.py  test_hashing.py  test_jpl_horizons_mission.py  test_mission_profile.py  test_moon_height.py  test_provenance.py  test_saturn_body.py  test_saturn_rings.py  test_saturn_rings_bjj.py  test_sources.py  test_starfield.py  test_zip_glb.py
public/missions/: artemis_ii.json
src/: App.tsx  main.tsx
src/Scene/: Atmosphere.tsx  Earth.tsx  Lighting.tsx  MissionTrajectory.tsx  Moon.tsx  Rings.tsx  Saturn.tsx  Scene.tsx  Stars.tsx  Sun.tsx  SunBloomOccluder.tsx  SystemLightRig.tsx  TexturedBody.tsx  Titan.tsx
src/lib/: astronomicalFrame.ts  bodies.ts  bodyOrientation.ts  bodyVisuals.ts  constants.ts  missionTrajectories.ts  missions.ts  orbits.ts  panoramas.ts  publicPath.ts  (+10 more)
(+58 files in other folders)
